Updated version (team)

--- a/app/src/main/res/layout/activity_team_create.xml
+++ b/app/src/main/res/layout/activity_team_create.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="96dp"
         android:text="Team Description:"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -36,7 +36,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="265dp"
         android:text="Team Logo:"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -48,6 +48,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
         android:text="Create Team"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,7 +60,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="20dp"
         android:text="Team name:"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -83,7 +84,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="19dp"
         android:ems="10"
-        android:hint="@string/team_name"
+        android:hint="Team Description"
         android:inputType="textPersonName"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -232,5 +233,15 @@
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/console_black" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/imageFilterView"
+        android:layout_width="92dp"
+        android:layout_height="93dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="37dp"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
+        app:srcCompat="@drawable/ic_baseline_image_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
