--- a/app/src/main/res/layout/activity_team_home.xml
+++ b/app/src/main/res/layout/activity_team_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_marginBaseline="100dp"
     tools:context=".team_home">
 
     <TextView
@@ -14,9 +15,55 @@
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
         android:text="Teams"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="360dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic7">
+
+        <ImageView
+            android:id="@+id/Teamimage"
+            android:layout_width="121dp"
+            android:layout_height="91dp"
+            android:layout_marginVertical="13dp"
+            app:srcCompat="@drawable/codenamealpha" />
+
+        <TextView
+            android:id="@+id/playernum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="40dp"
+            android:layout_marginStart="156dp"
+            android:text="Number of Players: 20"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/teamname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="4dp"
+            android:text="CodeNameAlpha"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/matchcount"
+            android:layout_width="100dp"
+            android:layout_height="20dp"
+            android:layout_marginVertical="60dp"
+            android:layout_marginStart="156dp"
+            android:text="Mtaches Won: 20"
+            android:textSize="12sp" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/cr_tournamet_topic7"
@@ -26,121 +73,10 @@
         android:layout_marginTop="140dp"
         android:fontFamily="sans-serif"
         android:text="My Teams"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="91dp"
-        android:text="Team1"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search" />
-
-    <TextView
-        android:id="@+id/textView39"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="60dp"
-        android:text="Create a team"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:text="Number of Players: 20"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:text="Number of Players: 20"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="21dp"
-        android:text="Team2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
-
-    <TextView
-        android:id="@+id/textView37"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="146dp"
-        android:text="Mtaches Won: 20"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="8dp"
-        android:text="Edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView37" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="74dp"
-        android:text="Delete"
-        app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button44" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="146dp"
-        android:text="Mtaches Won: 20"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <Button
-        android:id="@+id/button44"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="142dp"
-        android:text="Delete"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/search" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="92dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="4dp"
-        android:text="Edit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <SearchView
         android:id="@+id/search"
@@ -149,6 +85,90 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="29dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic6" />
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic6">
+
+    </SearchView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="345dp"
+        android:layout_height="106dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="232dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="100dp"
+            android:layout_marginVertical="40dp"
+            android:text="Create a team"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/imageView24"
+            android:layout_width="56dp"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginVertical="25dp"
+            app:srcCompat="@drawable/ic_baseline_add_circle_24" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="360dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+        <ImageView
+            android:id="@+id/Team2image"
+            android:layout_width="121dp"
+            android:layout_height="91dp"
+            android:layout_marginVertical="13dp"
+            app:srcCompat="@drawable/codenamealpha"
+            tools:srcCompat="@drawable/red" />
+
+        <TextView
+            android:id="@+id/playernum1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="40dp"
+            android:layout_marginStart="156dp"
+            android:text="Number of Players: 20"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/teamname2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="4dp"
+            android:text="Shadow"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/matchcount1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginVertical="60dp"
+            android:layout_marginStart="156dp"
+            android:text="Mtaches Won: 20"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/button13"
+            android:layout_width="92dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="196dp"
+            android:text="Delete" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
