--- a/app/src/main/res/layout/activity_team_update.xml
+++ b/app/src/main/res/layout/activity_team_update.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="96dp"
         android:text="Team Description:"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -36,7 +36,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="265dp"
         android:text="Team Players:"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -224,6 +224,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
         android:text="Manage Team"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -235,7 +236,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="20dp"
         android:text="Team name:"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -259,7 +260,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="19dp"
         android:ems="10"
-        android:hint="@string/team_name"
+        android:hint="Team Description"
         android:inputType="textPersonName"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
