--- a/app/src/main/res/layout/activity_tournament_create.xml
+++ b/app/src/main/res/layout/activity_tournament_create.xml
@@ -125,7 +125,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="96dp"
         android:text="@string/tournament_name1"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -136,7 +136,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="176dp"
         android:text="@string/tournament_type_1"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -147,7 +147,7 @@
         android:layout_marginStart="252dp"
         android:layout_marginTop="176dp"
         android:text="@string/max_teams_1"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -158,29 +158,30 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="264dp"
         android:text="@string/select_date_and_time"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="183dp"
-        android:layout_height="25dp"
+        android:layout_width="211dp"
+        android:layout_height="28dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="372dp"
         android:text="@string/tournament_background_image"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <TextView
         android:id="@+id/cr_tournamet_topic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="187dp"
+        android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
         android:text="@string/tournament_create"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -192,7 +193,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="20dp"
         android:text="@string/select_game"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
@@ -205,7 +206,7 @@
         android:ems="10"
         android:hint="@string/tournament_name"
         android:inputType="textPersonName"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
@@ -218,7 +219,7 @@
         android:ems="10"
         android:hint="@string/tournament_type"
         android:inputType="textPersonName"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/t_bracket" />
 
@@ -231,7 +232,7 @@
         android:ems="10"
         android:hint="@string/tournament_date"
         android:inputType="date"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -244,7 +245,7 @@
         android:ems="10"
         android:hint="@string/tournament_time"
         android:inputType="time"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editTextDate" />
 
@@ -293,7 +294,7 @@
         android:ems="10"
         android:hint="@string/max_teams"
         android:inputType="numberDecimal"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
