--- a/app/src/main/res/layout/activity_tournament_user_selected_t.xml
+++ b/app/src/main/res/layout/activity_tournament_user_selected_t.xml
@@ -6,7 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".tournament_user_selected_t">
 
-<androidx.appcompat.widget.Toolbar
+    <TextView
+        android:id="@+id/textView58"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="344dp"
+        android:text="moris18"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
+
+    <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="394dp"
     android:layout_height="57dp"
@@ -170,7 +181,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="172dp"
         android:text="@string/joined_teams"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
@@ -182,7 +193,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="60dp"
         android:text="@string/organizer_niimoh"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -193,7 +204,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="240dp"
         android:text="@string/leader_user_name"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView24"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -204,7 +215,62 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="240dp"
         android:text="@string/team_name"
-        android:textSize="12sp"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
+
+    <TextView
+        android:id="@+id/textView47"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="284dp"
+        android:text="1. maga"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
+
+    <TextView
+        android:id="@+id/textView49"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="312dp"
+        android:text="2. blasters"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
+
+    <TextView
+        android:id="@+id/textView55"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="344dp"
+        android:text="3. spookers"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
+
+    <TextView
+        android:id="@+id/textView56"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="284dp"
+        android:text="trex"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
+
+    <TextView
+        android:id="@+id/textView57"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="312dp"
+        android:text="blaster"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -215,7 +281,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="60dp"
         android:text="@string/starts_in"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -226,7 +292,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="100dp"
         android:text="@string/num_of_teams_5"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -237,7 +303,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="132dp"
         android:text="@string/min_4"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -248,7 +314,7 @@
         android:layout_marginStart="124dp"
         android:layout_marginTop="132dp"
         android:text="@string/max_16"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView20"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic5" />
 
@@ -272,16 +338,9 @@
         android:layout_marginTop="28dp"
         android:fontFamily="sans-serif"
         android:text="@string/tournament"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-<ListView
-    android:layout_width="320dp"
-    android:layout_height="104dp"
-    android:layout_marginStart="36dp"
-    android:layout_marginTop="24dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
