--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/accounttypewallpaper"
     tools:context=".login">
 
     <Button
         android:id="@+id/forplayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="264dp"
+        android:background="@color/black"
         android:hint="@string/player"
         android:onClick="login_player"
         android:textColorHint="#FFFFFF"
@@ -24,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="208dp"
+        android:background="@color/black"
         android:hint="@string/organization"
         android:onClick="login_org"
         android:textColorHint="#FFFFFF"
@@ -31,5 +34,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forplayer"
-        app:layout_constraintVertical_bias="0.631" />
+        app:layout_constraintVertical_bias="0.666" />
 </androidx.constraintlayout.widget.ConstraintLayout>
