--- a/app/src/main/res/layout/activity_login_org.xml
+++ b/app/src/main/res/layout/activity_login_org.xml
@@ -4,50 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     tools:context=".login_org">
 
     <TextView
         android:id="@+id/createanaccount5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="32dp"
         android:text="Create an Account"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_player5"
-        app:layout_constraintVertical_bias="0.093"
-        tools:layout_editor_absoluteX="85dp" />
+        app:layout_constraintVertical_bias="0.092" />
 
     <TextView
         android:id="@+id/t_login4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="224dp"
         android:hint="@string/login"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.36"
+        app:layout_constraintHorizontal_bias="0.453"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/username_player5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="44dp"
-        android:hint="@string/username"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/t_login4" />
-
-    <TextView
-        android:id="@+id/password_player5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="52dp"
-        android:hint="@string/password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_player5" />
 
     <EditText
         android:id="@+id/editTextTextPersonName11"
@@ -58,7 +40,7 @@
         android:textSize="12sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/username_player5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.148"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toEndOf="@+id/username_player5" />
 
     <EditText
@@ -69,25 +51,48 @@
         android:inputType="textPassword"
         app:layout_constraintBaseline_toBaselineOf="@+id/password_player5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.188"
+        app:layout_constraintHorizontal_bias="0.213"
         app:layout_constraintStart_toEndOf="@+id/password_player5" />
+
+    <TextView
+        android:id="@+id/password_player5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="44dp"
+        android:hint="@string/password"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_player5" />
 
     <Button
         android:id="@+id/login_player5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="40dp"
         android:hint="@string/login"
         android:onClick="organizer_home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_player5" />
 
     <TextView
+        android:id="@+id/username_player5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="52dp"
+        android:hint="@string/username"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/t_login4" />
+
+    <TextView
         android:id="@+id/signup5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:hint="@string/signup"
         app:layout_constraintBaseline_toBaselineOf="@+id/createanaccount5"
-        tools:layout_editor_absoluteX="210dp" />
+        app:layout_constraintStart_toEndOf="@+id/createanaccount5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
