--- a/app/src/main/res/layout/activity_login_player.xml
+++ b/app/src/main/res/layout/activity_login_player.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     tools:context=".login_player">
 
     <TextView
         android:id="@+id/T_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="212dp"
         android:hint="@string/login"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,22 +19,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/username_player"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="56dp"
-        android:hint="@string/username"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/T_login" />
-
-    <TextView
         android:id="@+id/password_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:hint="@string/password"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username_player" />
 
@@ -46,39 +38,19 @@
         android:textSize="12sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/username_player"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.239"
+        app:layout_constraintHorizontal_bias="0.237"
         app:layout_constraintStart_toEndOf="@+id/username_player" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="149dp"
-        android:layout_height="32dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintBaseline_toBaselineOf="@+id/password_player"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.247"
-        app:layout_constraintStart_toEndOf="@+id/password_player" />
 
     <Button
         android:id="@+id/login_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="152dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="48dp"
         android:hint="@string/login"
         android:onClick="user_home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_player" />
-
-    <TextView
-        android:id="@+id/createanaccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Create an Account"
-        app:layout_constraintTop_toBottomOf="@+id/login_player"
-        tools:layout_editor_absoluteX="99dp" />
 
     <TextView
         android:id="@+id/signup"
@@ -88,5 +60,37 @@
         android:hint="@string/signup"
         app:layout_constraintBaseline_toBaselineOf="@+id/createanaccount"
         app:layout_constraintStart_toEndOf="@+id/createanaccount" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="149dp"
+        android:layout_height="32dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintBaseline_toBaselineOf="@+id/password_player"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintStart_toEndOf="@+id/password_player" />
+
+    <TextView
+        android:id="@+id/createanaccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="20dp"
+        android:text="Create an Account"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_player" />
+
+    <TextView
+        android:id="@+id/username_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="60dp"
+        android:hint="@string/username"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/T_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
