--- a/app/src/main/res/layout/activity_match_player_list.xml
+++ b/app/src/main/res/layout/activity_match_player_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper"
     tools:context=".match_player_list">
 
     <androidx.appcompat.widget.Toolbar
@@ -18,127 +19,122 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-            android:id="@+id/textView43"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="1dp"
-            android:text="Games"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="39dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-        app:srcCompat="@drawable/console_black" />
-
-    <TextView
-            android:id="@+id/textView44"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="338dp"
-            android:layout_marginBottom="1dp"
-            android:text="Player"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="30dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
-        app:layout_constraintStart_toEndOf="@+id/imageView17"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-        app:srcCompat="@drawable/rank_black" />
-
-    <TextView
-            android:id="@+id/textView45"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="76dp"
-            android:layout_marginBottom="1dp"
-            android:text="Tournaments"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/textView46"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="182dp"
-            android:layout_marginBottom="1dp"
-            android:text="Home"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/imageView3"
         android:layout_width="32dp"
         android:layout_height="27dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="183dp"
         android:layout_marginBottom="24dp"
-        android:onClick="home"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView18"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/home_black" />
 
     <ImageView
-        android:id="@+id/imageView17"
+        android:id="@+id/imageView4"
+        android:layout_width="33dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="260dp"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/cup_black" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="30dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toBottomOf="@+id/descript"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/rank_black" />
+
+    <ImageView
+        android:id="@+id/imageView6"
         android:layout_width="32dp"
         android:layout_height="27dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView43"
         app:srcCompat="@drawable/team_black" />
 
     <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="33dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginBottom="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView14"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-        app:layout_constraintVertical_bias="0.857"
-        app:srcCompat="@drawable/cupwhite" />
+        android:id="@+id/imageView"
+        android:layout_width="39dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/console_white" />
 
     <TextView
-            android:id="@+id/textView48"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="258dp"
-            android:layout_marginBottom="1dp"
-            android:text="Teams"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/textView43"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="1dp"
+        android:text="Games"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
+    <TextView
+        android:id="@+id/textView44"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="338dp"
+        android:layout_marginBottom="1dp"
+        android:text="Player"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
+    <TextView
+        android:id="@+id/textView45"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="1dp"
+        android:text="Tournaments"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView46"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="182dp"
+        android:layout_marginBottom="1dp"
+        android:text="Home"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView48"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="258dp"
+        android:layout_marginBottom="1dp"
+        android:text="Teams"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <TextView
         android:id="@+id/match_org_list_h_round1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/round1"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/match_org_list_h_matches" />
 
@@ -146,21 +142,24 @@
         android:id="@+id/match_org_list_h_matches"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
         android:hint="@string/matches"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="346dp"
         android:layout_height="129dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="212dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
         <ImageView
             android:id="@+id/match3_team1_img"
@@ -168,7 +167,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team5" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team1" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -176,7 +177,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
-            android:text="Legends" />
+            android:text="Riders" />
 
         <ImageView
             android:id="@+id/match3_team2_img"
@@ -184,7 +185,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team6" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team2" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -192,7 +195,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="270dp"
             android:layout_marginTop="100dp"
-            android:text="Blazing" />
+            android:text="Swordy" />
 
         <TextView
             android:id="@+id/match2_team1_score"
@@ -221,21 +224,25 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="346dp"
         android:layout_height="129dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
         android:onClick="match_details"
-        android:layout_marginBottom="352dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
 
         <ImageView
-            android:id="@+id/match3_team1_img"
-            android:layout_width="79dp"
-            android:layout_height="83dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team1" />
+        android:id="@+id/match3_team1_img"
+        android:layout_width="79dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/team3" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -246,12 +253,14 @@
             android:text="Legends" />
 
         <ImageView
-            android:id="@+id/match3_team2_img"
-            android:layout_width="79dp"
-            android:layout_height="83dp"
-            android:layout_marginStart="250dp"
-            android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team2" />
+        android:id="@+id/match3_team2_img"
+        android:layout_width="79dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/team4" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -290,10 +299,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="346dp"
         android:layout_height="129dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="68dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
         <ImageView
             android:id="@+id/match3_team1_img"
@@ -301,7 +311,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team7" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team5" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -309,7 +321,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
-            android:text="Legends" />
+            android:text="Platlets" />
 
         <ImageView
             android:id="@+id/match3_team2_img"
@@ -317,7 +329,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team8" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team6" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -325,7 +339,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="270dp"
             android:layout_marginTop="100dp"
-            android:text="Blazing" />
+            android:text="Doggies" />
 
         <TextView
             android:id="@+id/match2_team1_score"
@@ -354,20 +368,24 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="346dp"
         android:layout_height="129dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="492dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/match_org_list_h_round1">
 
         <ImageView
-            android:id="@+id/match3_team1_img"
+            android:id="@+id/match2_team1_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team3" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team7" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -375,15 +393,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
-            android:text="Legends" />
+            android:text="Apexes" />
 
         <ImageView
-            android:id="@+id/match3_team2_img"
+            android:id="@+id/match2_team2_img"
             android:layout_width="79dp"
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team4" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team8" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -391,7 +411,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="270dp"
             android:layout_marginTop="100dp"
-            android:text="Blazing" />
+            android:text="Knights" />
 
         <TextView
             android:id="@+id/match2_team1_score"
