--- a/app/src/main/res/layout/activity_game_home.xml
+++ b/app/src/main/res/layout/activity_game_home.xml
@@ -134,6 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Games"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
