--- a/app/src/main/res/layout/activity_game_org_gamelist.xml
+++ b/app/src/main/res/layout/activity_game_org_gamelist.xml
@@ -109,12 +109,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
-        android:onClick="create_new_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="84dp"
         android:clickable="true"
+        android:onClick="create_new_game"
         app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -179,6 +179,7 @@
         android:layout_marginStart="45dp"
         android:layout_marginTop="28dp"
         android:text="@string/org_games"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -187,8 +188,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="61dp"
+        android:layout_marginTop="96dp"
         android:text="@string/add_games"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_tournament" />
 
@@ -196,8 +198,8 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="208dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="228dp"
+        android:layout_marginTop="16dp"
         android:text="@string/add_a_game"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2" />
