--- a/app/src/main/res/layout/activity_game_user_gamelist.xml
+++ b/app/src/main/res/layout/activity_game_user_gamelist.xml
@@ -213,6 +213,7 @@
         android:layout_marginStart="47dp"
         android:layout_marginTop="36dp"
         android:text="@string/user_player"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -223,6 +224,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="19dp"
         android:text="@string/user_Stats"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
@@ -230,9 +232,10 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="84dp"
         android:text="@string/user_mygames"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView17"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -240,9 +243,10 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="84dp"
         android:text="@string/user_tournaments"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView18"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -250,9 +254,10 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="84dp"
         android:text="@string/user_playerinfo"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView19"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -264,7 +269,8 @@
         android:layout_marginTop="36dp"
         android:text="@string/user_subsgame"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        android:textSize="14sp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="346dp"
