strings.xml team values added

--- a/app/src/main/res/layout/activity_team_create.xml
+++ b/app/src/main/res/layout/activity_team_create.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="109dp"
         android:backgroundTint="@color/grey"
-        android:text="CREATE"
+        android:text="@string/create"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="96dp"
-        android:text="Team Description:"
+        android:text="@string/team_descrption"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="265dp"
-        android:text="Team Logo:"
+        android:text="@string/team_logo"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -47,7 +47,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
-        android:text="Create Team"
+        android:text="@string/create_team"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="20dp"
-        android:text="Team name:"
+        android:text="@string/team_name"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
@@ -110,7 +110,7 @@
         android:layout_marginStart="256dp"
         android:layout_marginTop="205dp"
         android:backgroundTint="@color/white"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
