--- a/app/src/main/res/layout/activity_team_home.xml
+++ b/app/src/main/res/layout/activity_team_home.xml
@@ -137,7 +137,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif"
-        android:text="Teams"
+        android:text="@string/teams"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="40dp"
             android:layout_marginStart="156dp"
-            android:text="Number of Players: 20"
+            android:text="@string/num_pl_20"
             android:textSize="12sp" />
 
         <TextView
@@ -178,7 +178,7 @@
             android:layout_marginStart="156dp"
             android:layout_marginTop="4dp"
             android:onClick="user_team_managepage"
-            android:text="CodeNameAlpha"
+            android:text="@string/code_name_alpha"
             android:textSize="16sp" />
 
         <TextView
@@ -187,7 +187,7 @@
             android:layout_height="20dp"
             android:layout_marginVertical="60dp"
             android:layout_marginStart="156dp"
-            android:text="Mtaches Won: 20"
+            android:text="@string/maches_won20"
             android:textSize="12sp" />
     </androidx.cardview.widget.CardView>
 
@@ -198,7 +198,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="140dp"
         android:fontFamily="sans-serif"
-        android:text="My Teams"
+        android:text="@string/my_teams"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -230,7 +230,7 @@
             android:layout_marginHorizontal="100dp"
             android:layout_marginVertical="40dp"
             android:onClick="user_team_create"
-            android:text="Create a team"
+            android:text="@string/create_a_team"
             android:textSize="16sp" />
 
         <ImageView
@@ -266,7 +266,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="40dp"
             android:layout_marginStart="156dp"
-            android:text="Number of Players: 20"
+            android:text="@string/num_pl_20"
             android:textSize="12sp" />
 
         <TextView
@@ -276,7 +276,7 @@
             android:layout_marginVertical="10dp"
             android:layout_marginStart="156dp"
             android:layout_marginTop="4dp"
-            android:text="Shadow"
+            android:text="@string/shadow"
             android:textSize="16sp" />
 
         <TextView
@@ -285,7 +285,7 @@
             android:layout_height="20dp"
             android:layout_marginVertical="60dp"
             android:layout_marginStart="156dp"
-            android:text="Mtaches Won: 20"
+            android:text="@string/maches_won20"
             android:textSize="12sp" />
 
         <Button
