Images of match_org_list, integrate match_create into match_org_list and integrate match_update into match_org_list

--- a/app/src/main/res/layout/activity_match_org_list.xml
+++ b/app/src/main/res/layout/activity_match_org_list.xml
@@ -125,7 +125,7 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="48dp"
         android:clickable="true"
         android:onClick="match_org_create"
         app:backgroundTint="@color/white"
@@ -173,7 +173,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team1" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team1" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -189,7 +191,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team2" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team2" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -254,7 +258,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team3" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team3" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -270,7 +276,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team4" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team4" />
 
         <TextView
             android:id="@+id/match2_team1_name"
@@ -335,7 +343,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team5" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team5" />
 
         <TextView
             android:id="@+id/match2_team2_name"
@@ -351,7 +361,9 @@
             android:layout_height="83dp"
             android:layout_marginStart="250dp"
             android:layout_marginTop="10dp"
-            tools:srcCompat="@drawable/team6" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/team6" />
 
         <TextView
             android:id="@+id/match2_team1_name"
