--- a/app/src/main/res/layout/activity_match_org_create.xml
+++ b/app/src/main/res/layout/activity_match_org_create.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="36dp"
         android:backgroundTint="@color/grey"
-        android:text="CREATE"
+        android:hint="@string/create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TV_STD"
@@ -138,7 +138,7 @@
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:backgroundTint="@color/white"
-        android:text="Cancel"
+        android:hint="@string/cancel"
         android:textColor="@color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/Btn_create"
         app:layout_constraintEnd_toEndOf="parent"
