--- a/app/src/main/res/layout/activity_match_org_update.xml
+++ b/app/src/main/res/layout/activity_match_org_update.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="36dp"
         android:backgroundTint="@color/grey"
-        android:text="CREATE"
+        android:hint="@string/user_Update"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TV_STD" />
 
@@ -48,7 +48,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/grey"
-        android:text="DELETE"
+        android:hint="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Bracket :"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Team A :"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Team B :"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Start Date and Time :"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:fontFamily="sans-serif"
-        android:hint="@string/matchcreate"
+        android:hint="@string/updatematch"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.081"
@@ -122,7 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Round :"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +149,7 @@
         android:layout_width="103dp"
         android:layout_height="44dp"
         android:backgroundTint="@color/white"
-        android:text="Cancel"
+        android:hint="@string/cancel"
         android:textColor="@color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/Btn_create"
         app:layout_constraintEnd_toEndOf="parent"
